README: update screenshot ui: fix menu style to avoid scrollbar

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -40,6 +40,11 @@ a:visited {
   z-index: 100;
 }
 
+#browser-menu {
+  width: 234px;
+  max-height: unset;
+}
+
 .err {
   margin: 1em;
   background: snow;
